--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
    <head>
       <meta charset="utf-8" />
-      <link rel="icon" href="../src//assets/movieicon.png" />
+      <link rel="icon" href="./manifestAsset/movieicon.png" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="theme-color" content="#000000" />
       <meta name="description" content="Web site created using create-react-app" />
-      <link rel="apple-touch-icon" href="../src/assets/movieicon-192.png" />
+      <link rel="apple-touch-icon" href="./manifestAsset/movieicon-192.png" />
 
       <!--
       manifest.json provides metadata used when your web app is installed on a
